# Orion

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0929abe8f5b4_add_retry_columns.py  1a2ed4f42d3d_add_priority_column.py  4be03487e61e_add_scheduled_at_column.py  76523dd7f503_add_tasks_table.py  7812564d30e8_add_lease_columns.py  7a7f5da43e0b_add_task_type_column.py  86e1b17da262_add_task_dependencies_table.py  bc23f9124e13_create_task_events_table.py
docs/: 00_project_vision.md
orion/: config.py  database.py  enums.py  events.py  exceptions.py  main.py  queue.py  recovery.py  redis.py  scheduler.py  worker.py
orion/models/: __init__.py  task.py  task_event.py
orion/routes/: dashboard.py  tasks.py
orion/schemas/: task.py
orion/services/: dashboard_service.py
orion/templates/: dashboard.html  layout.html  metrics_partial.html  task_detail.html
tests/: test_main.py  test_tasks.py
