[project]
name = "orion"
version = "0.1.0"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "pydantic-settings>=2.3.3,<2.4.0",
    "pytest>=8.2.2,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
    "sqlalchemy[asyncio]>=2.0.31,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.1,<1.14.0",
    "redis>=5.0.4,<5.1.0",
    "jinja2>=3.1.4,<3.2.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orion*"]
